--- a/SHSoftwareRasterizer/Base.lproj/Main.storyboard
+++ b/SHSoftwareRasterizer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
@@ -681,8 +681,12 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aq5-VM-sfh">
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aq5-VM-sfh">
                                 <rect key="frame" x="470" y="242" width="88" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="76" id="1iH-lo-QYv"/>
+                                    <constraint firstAttribute="height" constant="21" id="uYJ-aR-vRp"/>
+                                </constraints>
                                 <buttonCell key="cell" type="push" title="select..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KUn-ys-dOw">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -691,20 +695,39 @@
                                     <action selector="fileButtonClick:" target="XfG-lQ-9wD" id="UGI-Y9-Qvu"/>
                                 </connections>
                             </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eB5-cR-H6M">
+                                <rect key="frame" x="470" y="217" width="88" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="76" id="GrO-Jm-8eg"/>
+                                    <constraint firstAttribute="height" constant="21" id="WCa-Cm-iSw"/>
+                                </constraints>
+                                <buttonCell key="cell" type="push" title="Filter" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="c5m-3Q-jMF">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="extraButtonClick:" target="XfG-lQ-9wD" id="KGQ-WJ-B51"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="eB5-cR-H6M" firstAttribute="top" secondItem="aq5-VM-sfh" secondAttribute="bottom" constant="4" id="5fE-SK-h6F"/>
                             <constraint firstItem="VMA-Y5-97G" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="6" id="Fsx-sF-sDI"/>
+                            <constraint firstAttribute="trailing" secondItem="aq5-VM-sfh" secondAttribute="trailing" constant="20" id="NrZ-nc-gu0"/>
+                            <constraint firstAttribute="trailing" secondItem="eB5-cR-H6M" secondAttribute="trailing" constant="20" id="QPq-0E-fd5"/>
                             <constraint firstItem="VMA-Y5-97G" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="7" id="fiy-08-6uR"/>
+                            <constraint firstItem="aq5-VM-sfh" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="kuO-fo-k2D"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="extraButton" destination="eB5-cR-H6M" id="QAH-DP-h0r"/>
                         <outlet property="fileButton" destination="aq5-VM-sfh" id="7Rp-Nd-6lV"/>
                         <outlet property="fpsLabel" destination="VMA-Y5-97G" id="FKF-wJ-zz2"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-577" y="377"/>
+            <point key="canvasLocation" x="-289" y="445"/>
         </scene>
     </scenes>
 </document>
